@@ -16,7 +16,6 @@ package tech.pegasys.teku.spec.logic.common.statetransition.epoch.status;
 import static tech.pegasys.teku.infrastructure.unsigned.UInt64.MAX_VALUE;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import org.apache.tuweni.bytes.Bytes32;
 import tech.pegasys.teku.infrastructure.ssz.SszList;
 import tech.pegasys.teku.infrastructure.unsigned.UInt64;
@@ -91,7 +90,7 @@ public abstract class AbstractValidatorStatusFactory implements ValidatorStatusF
     return validators.stream()
         .parallel()
         .map(validator -> createValidatorStatus(validator, previousEpoch, currentEpoch))
-        .collect(Collectors.toList());
+        .toList();
   }
 
   @Override
