@@ -17,7 +17,6 @@ import static com.google.common.base.Preconditions.checkArgument;
 
 import com.google.common.collect.Streams;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.apache.tuweni.bytes.Bytes;
 
 /**
@@ -30,8 +29,7 @@ public class PublicKeyMessagePair {
   public static List<PublicKeyMessagePair> fromLists(
       List<PublicKey> publicKeys, List<Bytes> messages) {
     checkArgument(publicKeys.size() == messages.size());
-    return Streams.zip(publicKeys.stream(), messages.stream(), PublicKeyMessagePair::new)
-        .collect(Collectors.toList());
+    return Streams.zip(publicKeys.stream(), messages.stream(), PublicKeyMessagePair::new).toList();
   }
 
   private final PublicKey publicKey;
