@@ -24,7 +24,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.NavigableMap;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -688,7 +687,7 @@ public class CombinedChainDataClient {
                                 isCanonicalBlockCalculated(
                                     block.getSlot(), block.getRoot(), chainHead.getRoot()),
                                 isFinalized(block.getSlot())))
-                    .collect(Collectors.toList()));
+                    .toList());
   }
 
   List<BlockAndMetaData> mergeNonCanonicalAndCanonicalBlocks(
@@ -696,14 +695,14 @@ public class CombinedChainDataClient {
       final ChainHead chainHead,
       final Optional<SignedBeaconBlock> canonicalBlock) {
     verifyNotNull(signedBeaconBlocks, "Expected empty set but got null");
-    final List<BlockAndMetaData> result =
-        signedBeaconBlocks.stream()
-            .map(block -> toBlockAndMetaData(block, chainHead, false, false))
-            .collect(Collectors.toList());
-    canonicalBlock.ifPresent(
-        block ->
-            result.add(toBlockAndMetaData(block, chainHead, true, isFinalized(block.getSlot()))));
-    return result;
+    return Stream.concat(
+            signedBeaconBlocks.stream()
+                .map(block -> toBlockAndMetaData(block, chainHead, false, false)),
+            canonicalBlock.stream()
+                .map(
+                    block ->
+                        toBlockAndMetaData(block, chainHead, true, isFinalized(block.getSlot()))))
+        .toList();
   }
 
   private BlockAndMetaData toBlockAndMetaData(
