@@ -24,7 +24,6 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import org.apache.tuweni.bytes.Bytes;
 import org.apache.tuweni.bytes.Bytes32;
@@ -134,7 +133,7 @@ public class CombinedKvStoreDao<S extends SchemaCombined>
       return stream
           .filter((column) -> column.getValue().getSlot().compareTo(slot) < 0)
           .map(ColumnEntry::getKey)
-          .collect(Collectors.toList());
+          .toList();
     }
   }
 
@@ -283,7 +282,7 @@ public class CombinedKvStoreDao<S extends SchemaCombined>
     return maybeRoots.stream()
         .flatMap(Collection::stream)
         .flatMap(root -> db.get(schema.getColumnNonCanonicalBlocksByRoot(), root).stream())
-        .collect(Collectors.toList());
+        .toList();
   }
 
   @Override
@@ -385,7 +384,7 @@ public class CombinedKvStoreDao<S extends SchemaCombined>
                 slotAndBlockRoot.getSlot(), slotAndBlockRoot.getBlockRoot(), UInt64.ZERO),
             new SlotAndBlockRootAndBlobIndex(
                 slotAndBlockRoot.getSlot(), slotAndBlockRoot.getBlockRoot(), UInt64.MAX_VALUE))) {
-      return streamKeys.collect(Collectors.toList());
+      return streamKeys.toList();
     }
   }
 
@@ -399,7 +398,7 @@ public class CombinedKvStoreDao<S extends SchemaCombined>
                 slotAndBlockRoot.getSlot(), slotAndBlockRoot.getBlockRoot(), UInt64.ZERO),
             new SlotAndBlockRootAndBlobIndex(
                 slotAndBlockRoot.getSlot(), slotAndBlockRoot.getBlockRoot(), UInt64.MAX_VALUE))) {
-      return streamKeys.collect(Collectors.toList());
+      return streamKeys.toList();
     }
   }
 
