@@ -20,7 +20,6 @@ import java.nio.file.Path;
 import java.time.Duration;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.apache.commons.lang3.StringUtils;
 import picocli.CommandLine;
 import tech.pegasys.teku.config.TekuConfiguration;
@@ -124,9 +123,7 @@ public class ValidatorKeysOptions {
   }
 
   private List<String> parseValidatorExternalKeys() {
-    return validatorExternalSignerPublicKeys.stream()
-        .filter(StringUtils::isNotBlank)
-        .collect(Collectors.toList());
+    return validatorExternalSignerPublicKeys.stream().filter(StringUtils::isNotBlank).toList();
   }
 
   private URL parseValidatorExternalSignerUrl() {
